# presentations

./: PaperReading.md  README.md  TechTalk  TechTalk.md
CnosDB Tutorial for Muggles/module-01/: index.md
Database System Note/: README.md  Relational Model and Relational Algebra
Use Rust To Make A TSDB/: README.md  Use Rust To Make A TSDB（三）.pptx  Use Rust To Make A TSDB（二）.pptx  lesson25-28.pptx  lesson_13.pptx
Use Rust To Make A TSDB/design_pattern/: Cargo.toml
Use Rust To Make A TSDB/design_pattern/src/: main.rs
Use Rust To Make A TSDB/design_pattern/src/pattern/: adapter.rs  factory.rs  flyweight.rs  iterator.rs  mod.rs  prototype.rs  singleton.rs
Use Rust To Make A TSDB/design_pattern/src/pattern/abstract_factory/: mac.rs  mod.rs  ui.rs  windows.rs
Use Rust To Make A TSDB/design_pattern/src/pattern/bridge/: advanced.rs  basic.rs  device.rs  mod.rs  radio.rs  remote.rs  tv.rs
Use Rust To Make A TSDB/design_pattern/src/pattern/chain_of_responsibility/: cashier.rs  department.rs  doctor.rs  medical.rs  mod.rs  patient.rs  reception.rs
Use Rust To Make A TSDB/design_pattern/src/pattern/command/: command.rs  light.rs  light_off_command.rs  mod.rs  (+2 more)
Use Rust To Make A TSDB/learn_rust/: Cargo.toml
Use Rust To Make A TSDB/learn_rust/eighth_lesson/: Cargo.toml
Use Rust To Make A TSDB/learn_rust/eighth_lesson/src/: lib.rs  pub_use.rs  test.rs
Use Rust To Make A TSDB/learn_rust/eleventh_lesson/: Cargo.toml
Use Rust To Make A TSDB/learn_rust/eleventh_lesson/src/: async.rs  async_life.rs  async_move.rs  pin.rs  stream.rs
Use Rust To Make A TSDB/learn_rust/fifth_lesson/: Cargo.toml
Use Rust To Make A TSDB/learn_rust/fifth_lesson/src/: collection.rs  error.rs  error2.rs
Use Rust To Make A TSDB/learn_rust/first_lesson/: Cargo.toml
Use Rust To Make A TSDB/learn_rust/first_lesson/src/: main  main.rs  mut  mut.rs
Use Rust To Make A TSDB/learn_rust/fourth_lesson/: Cargo.toml
Use Rust To Make A TSDB/learn_rust/fourth_lesson/src/: closure.rs  iterator.rs
Use Rust To Make A TSDB/learn_rust/lesson_25-28/: Cargo.toml
Use Rust To Make A TSDB/learn_rust/lesson_25-28/proc_macro/: Cargo.toml
Use Rust To Make A TSDB/learn_rust/lesson_25-28/src/: main.rs
Use Rust To Make A TSDB/learn_rust/ninth_lesson/: Cargo.toml
Use Rust To Make A TSDB/learn_rust/ninth_lesson/benches/: my_bench.rs
Use Rust To Make A TSDB/learn_rust/ninth_lesson/src/: lib.rs  test.rs
Use Rust To Make A TSDB/learn_rust/ninth_lesson/tests/: construct.rs  integration_test.rs
Use Rust To Make A TSDB/learn_rust/second_lesson/: Cargo.toml
Use Rust To Make A TSDB/learn_rust/second_lesson/src/: borrow.rs  class_test.rs  compose_types.rs  flow_control.rs  life.rs  match.rs  ownership.rs  types.rs  varables.rs
Use Rust To Make A TSDB/learn_rust/seventh_lesson/: Cargo.toml
Use Rust To Make A TSDB/learn_rust/seventh_lesson/benches/: rc_refcell.rs
Use Rust To Make A TSDB/learn_rust/seventh_lesson/src/: lib.rs  smart_pointer.rs
Use Rust To Make A TSDB/learn_rust/sixth_lesson/: Cargo.toml
Use Rust To Make A TSDB/learn_rust/sixth_lesson/src/: pointer.rs  smart_pointers.rs
Use Rust To Make A TSDB/learn_rust/tenth_lesson/: Cargo.toml
Use Rust To Make A TSDB/learn_rust/tenth_lesson/src/: atomic.rs  barrier.rs  channel.rs  condvar.rs  join_thread.rs  main.rs  move_to_thread.rs  mutex.rs  rwlock.rs  sync_and_send.rs
Use Rust To Make A TSDB/learn_rust/third_lesson/: Cargo.toml
Use Rust To Make A TSDB/learn_rust/third_lesson/src/: generies.rs  struct.rs  traits.rs
Use Rust To Make A TSDB/learn_rust/thirteenth_lesson/: Cargo.toml
Use Rust To Make A TSDB/learn_rust/twelfth_lesson/: Cargo.toml
Use Rust To Make A TSDB/learn_rust/twelfth_lesson/src/: main.rs  simple.rs
Use Rust To Make A TSDB/radix_tree/: Cargo.toml
Use Rust To Make A TSDB/radix_tree/src/: lib.rs  radix.rs
Use Rust To Make A TSDB/roaring_bitmap/: Cargo.toml
Use Rust To Make A TSDB/roaring_bitmap/src/: container.rs  lib.rs
(+17 files in other folders)
