[package]
name = "fifth_lesson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name ="error"
path ="src/error.rs"


[[bin]]
name ="collection"
path ="src/collection.rs"



[[bin]]
name ="error2"
path ="src/error2.rs"