[package]
name = "twelfth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
tokio = { version = "1.2.0", features = ["full"] }


[[bin]]
name = "main"
path = "./src/main.rs"

[[bin]]
name = "simple"
path = "./src/simple.rs"